# seatest

./: .gitattributes  .gitignore  .lint.sh  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  autoformat.sh  evaluators.md  lint.sh  mkdocs.yml  seatest.code-workspace  seatest_evaluators.md
.github/workflows/: cmake-multi-platform.yml  static.yml
docs/: CNAME  documentation.md  evaluators.md  index.md
example/: example.c  example.h  main.c  main.h  phony.h  pseudocode.h
include/: seatest.h
include/seatest/: config.h  console.h  guts.h  helpers.h  internal.h  macros.h  platform.h  timing.h  types.h  version.h.in
site/: 404.html  index.html  sitemap.xml
site/command-line/: index.html
site/development/: index.html
site/evaluators/: index.html
site/helpers/: index.html
site/installation/: index.html
site/sample/: index.html
site/search/: search_index.json
site/sources/: logo.psd
site/troubleshooting/: index.html
site/usage/: index.html
site/writing-a-test-rig/: index.html
src/: main.c  sandbox.c  seatest.c  seatest_guts.c  seatest_timing.c
